# predict-strike

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.dev.yml  docker-compose.yml  run-dev.ps1
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  package-lock.json  package.json  pyproject.toml
backend/predict_strike_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/src/: __init__.py  main.py
backend/src/collectors/: __init__.py  gdelt.py  notam.py  opensky.py  pizzint.py  polymarket.py
backend/src/config/: __init__.py  notam_location_registry.py  opensky_registry.py  settings.py
backend/src/models/: __init__.py  schemas.py
backend/src/routes/: alerts.py  health.py  markets.py  pizza_index.py  risk.py  router.py  signals.py
backend/src/services/: alert_pipeline.py  gdelt_assessment.py  market_pipeline.py  notam_assessment.py  opensky_assessment.py  pizza_index_pipeline.py  risk_engine.py  seed_data.py  signal_pipeline.py
backend/src/storage/: __init__.py  signal_store.py
backend/tests/: test_alert_pipeline.py  test_alert_routes.py  test_cors.py  test_gdelt_collector.py  test_market_pipeline.py  test_market_routes.py  test_notam_assessment.py  test_notam_collector.py  test_notam_location_registry.py  test_opensky_assessment.py  test_opensky_collector.py  test_pizza_index_pipeline.py  test_pizza_index_routes.py  test_pizzint_collector.py  test_polymarket_collector.py  test_risk_engine.py  test_seed_data.py  test_signal_routes.py  test_signal_store.py
backend/tools/: pizza_index_puppeteer_runner.mjs
(+223 files in other folders)
