[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "predict-strike-backend"
version = "0.1.0"
description = "FastAPI MVP scaffold for Predict Strike"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["src*"]
